# XamlCpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  XamlCpp.WinRT.sln  azure-pipelines.yml
async/: CMakeLists.txt
async/src/: action.cpp
async/test/: CMakeLists.txt
async/test/src/: main.cpp
cmdline/: CMakeLists.txt
cmdline/src/: deserializer.cpp  option.cpp  parser.cpp
cmdline_helper/: CMakeLists.txt
cmdline_helper/src/: options_base.cpp  options_base.hpp
compiler/: CMakeLists.txt
compiler/include/xaml/: compiler.hpp
compiler/src/: compiler.cpp  cpp.cpp
compiler/test/: CMakeLists.txt
compiler/test/include/: test.xaml.hpp
compiler/test/src/: main.cpp  test.xaml.cpp
compiler/test/view/: test.xaml
detector/: CMakeLists.txt
detector/include/: options.h
detector/src/: main.cpp  options.cpp
global/: CMakeLists.txt
global/include/xaml/: box.h  box.hpp  buffer.h  callback.h  callback.hpp  converter.h  delegate.h  delegate.hpp  enumerable.h  enumerable.hpp  event.h  guid.h  map.h  object.h  object.hpp  observable_vector.h  ptr.hpp  result.h  result.hpp  result_handler.h  result_posix.h  result_win32.h  string.h  string.hpp  strings.hpp  utility.h  utility.hpp  vector.h  vector.hpp  version.h  version.hpp  weak_reference.h  xaml_ptr.hpp
global/sig/: xaml_global.xml
global/src/: box.cpp  buffer.cpp  callback.cpp  delegate.cpp  event.cpp  function.hpp  map.cpp  object.cpp  observable_vector.cpp  result.cpp  result_handler.cpp  string.cpp  strings.cpp  vector.cpp
global/test/: CMakeLists.txt
global/test/c/: CMakeLists.txt
global/test/cxx/: CMakeLists.txt
markup/: CMakeLists.txt
markup/src/: binding.cpp  data_template.cpp  dynamic_resource.cpp  element_base.cpp  meta.cpp  platform.cpp  template_base.cpp
meta/: CMakeLists.txt  meta.vcxproj  meta.vcxproj.filters  xaml_meta.vcxproj  xaml_meta.vcxproj.filters
meta/cmake/: xaml_meta-config.cmake.in
meta/include/xaml/: array_view.hpp  delegate.h  delegate.hpp  enumerable.h  guid.h  object.h  object.hpp  observable_vector.hpp  result.h  string.h  string.hpp  strings.hpp  utility.hpp  vector.h  vector.hpp  version.hpp  xaml_ptr.hpp
meta/src/: binding.cpp  collection_property_info.cpp  conv.cpp  default_property.cpp  delegate.cpp  enum_info.cpp  event_info.cpp  meta.cpp  meta_context.cpp  method_info.cpp  module.cpp  object.cpp  property_info.cpp  reflection_info.hpp  string.cpp  type_info.cpp  vector.cpp
meta/test/: CMakeLists.txt  main.cpp  meta_test.vcxproj  meta_test.vcxproj.filters
meta/test/include/: calculator.h
meta/test/src/: calculator.cpp  main.cpp
parser/: CMakeLists.txt
parser/include/xaml/: deserializer.hpp  parser.hpp  xaml_node.hpp
parser/src/: binding.cpp  data_template.cpp  deserializer.cpp  meta.cpp  node.cpp  parser.cpp
parser/test/: CMakeLists.txt  G
parser/test/include/: test.xaml.h  test_converter.h  test_model.h
parser/test/src/: main.cpp  test.xaml.cpp  test_converter.cpp  test_model.cpp
parser/test/view/: test.xaml
pugixml/: CMakeLists.txt
pugixml/src/: pugiconfig.hpp  pugixml.cpp
rapidxml/: CMakeLists.txt
rapidxml/include/rapidxml/: iterators.hpp  memory_pool.hpp  utility.hpp  xml_attribute.hpp  xml_base.hpp  xml_document.hpp  xml_node.hpp
rapidxml/src/: memory_pool.cpp  xml_attribute.cpp  xml_base.cpp  xml_document.cpp  xml_node.cpp
resource/: CMakeLists.txt
resource_compiler/: CMakeLists.txt
resource_compiler/include/: options.h
resource_compiler/src/: main.cpp  options.cpp
ui/: CMakeLists.txt  packages.config  ui.vcxproj  ui.vcxproj.filters  xaml_ui.vcxproj  xaml_ui.vcxproj.filters
ui/appmain/: CMakeLists.txt
ui/appmain/src/: appmain.cpp
ui/cmake/: xaml_ui-config.cmake.in
ui/meta/: CMakeLists.txt
ui/meta/cmake/: xaml_ui_meta-config.cmake.in
ui/meta/src/: meta.cpp
ui/src/: pch.h
ui/src/cocoa/: XamlApplicationDelegate.h  XamlButtonDelegate.h  XamlDelgate.m  XamlDelgate.mm  XamlEntryDelegate.h  XamlSystemMenuItemDelegate.h  XamlWindow.AppDelegate.mm  XamlWindowDelegate.h  application.mm  button.mm  canvas.mm  control.mm  entry.mm  filebox.mm  grid.mm  label.mm  menu_bar.mm  monitor.mm  msgbox.mm  nsstring.hpp  password_entry.mm  screen.mm  strings.hpp  timer.mm  window.mm
ui/src/gtk3/: application.cpp  button.cpp  canvas.cpp  container.cpp  control.cpp  entry.cpp  filebox.cpp  grid.cpp  gstring.cpp  gstring.hpp  label.cpp  menu_bar.cpp  monitor.cpp  msgbox.cpp  password_entry.cpp  resources.hpp  screen.cpp  timer.cpp  window.cpp  xamlfixed.c
ui/src/linux/: application.cpp  container.cpp  control.cpp  window.cpp
ui/src/qt/: application.cpp  filebox.cpp  menu_bar.cpp  monitor.cpp  msgbox.cpp  qstring.hpp  window.cpp
ui/src/qt5/: application.cpp  control.cpp  filebox.cpp  menu_bar.cpp  monitor.cpp  msgbox.cpp  qstring.hpp  timer.cpp  window.cpp
ui/src/shared/: application.cpp  application.hpp  atomic_guard.hpp  canvas.cpp  container.cpp  container.hpp  (+17 more)
ui/test/: App.cpp  App.h  App.xaml  CMakeLists.txt  MainPage.h  MainPage.idl  Package.appxmanifest  main.cpp  packages.config  ui_test.vcxproj  ui_test.vcxproj.filters
ui_canvas/: CMakeLists.txt
ui_canvas/meta/: CMakeLists.txt
ui_controls/: CMakeLists.txt
ui_controls/cmake/: xaml_ui_controls-config.cmake.in
ui_controls/meta/: CMakeLists.txt
ui_controls/test/: App.cpp  CMakeLists.txt  MainPage.cpp  MainPage.xaml  ui_test.vcxproj.filters
ui_webview/: CMakeLists.txt
ui_webview/meta/: CMakeLists.txt
ui_webview/test/: CMakeLists.txt
xaml/: CMakeLists.txt  xaml.vcxproj  xaml.vcxproj.filters
xaml/cmake/: xaml-config.cmake.in
xaml/src/: binding.cpp  binding_extension.cpp  deserialize.cpp  deserializer.cpp  parser.cpp
xaml/test/: App.cpp  App.h  App.xaml  CMakeLists.txt  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  Package.appxmanifest  main.cpp  packages.config  test.xaml  test_window.cpp  xaml_test.vcxproj  xaml_test.vcxproj.filters
xamlc/: CMakeLists.txt
xamlc/cmake/: xamlc-config.cmake.in
xamlc/src/: compiler.cpp  main.cpp
xamlc/test/: CMakeLists.txt
xamlcpp/: CMakeLists.txt
xamlcpp/src/: main.cpp
(+444 files in other folders)
